--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,12 +7,12 @@
 
   <ion-list>
     <ion-item>
-      <ion-label stacked>Username</ion-label>
+      <ion-label stacked>Usuário</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
     <ion-item>
 
-      <ion-label stacked>Password</ion-label>
+      <ion-label stacked>Senha</ion-label>
       <ion-input type="password"></ion-input>
     </ion-item>
   </ion-list>
